fix all issue