@@ -75,11 +75,11 @@ public class HorseRace {
     int nHorses = 7;
     int pause = 200;
     if(args.length > 0) { // Optional argument
-      int n = new Integer(args[0]);
+      int n = Integer.valueOf(args[0]);
       nHorses = n > 0 ? n : nHorses;
     }
     if(args.length > 1) { // Optional argument
-      int p = new Integer(args[1]);
+      int p = Integer.valueOf(args[1]);
       pause = p > -1 ? p : pause;
     }
     new HorseRace(nHorses, pause);
