@@ -64,11 +64,11 @@ public abstract class Tester<C> {
   }
   public static void initMain(String[] args) {
     if(args.length > 0)
-      testReps = new Integer(args[0]);
+      testReps = Integer.valueOf(args[0]);
     if(args.length > 1)
-      testCycles = new Integer(args[1]);
+      testCycles = Integer.valueOf(args[1]);
     if(args.length > 2)
-      containerSize = new Integer(args[2]);
+      containerSize = Integer.valueOf(args[2]);
     System.out.printf("%-27s %14s %14s\n",
       "Type", "Read time", "Write time");
   }
