@@ -181,7 +181,7 @@ public class RestaurantWithQueues {
     Restaurant restaurant = new Restaurant(exec, 5, 2);
     exec.execute(restaurant);
     if(args.length > 0) // Optional argument
-      TimeUnit.SECONDS.sleep(new Integer(args[0]));
+      TimeUnit.SECONDS.sleep(Integer.valueOf(args[0]));
     else {
       print("Press 'Enter' to quit");
       System.in.read();
