@@ -5,13 +5,13 @@ import java.util.*;
 public class ArrayInit {
   public static void main(String[] args) {
     Integer[] a = {
-      new Integer(1),
-      new Integer(2),
+      Integer.valueOf(1),
+      Integer.valueOf(2),
       3, // Autoboxing
     };
     Integer[] b = new Integer[]{
-      new Integer(1),
-      new Integer(2),
+      Integer.valueOf(1),
+      Integer.valueOf(2),
       3, // Autoboxing
     };
     System.out.println(Arrays.toString(a));
