@@ -9,8 +9,8 @@ public class NewVarArgs {
   }
   public static void main(String[] args) {
     // Can take individual elements:
-    printArray(new Integer(47), new Float(3.14),
-      new Double(11.11));
+    printArray(Integer.valueOf(47), Float.valueOf(3.14f),
+      Double.valueOf(11.11));
     printArray(47, 3.14F, 11.11);
     printArray("one", "two", "three");
     printArray(new A(), new A(), new A());
