@@ -2,8 +2,8 @@ package operators;//: operators/Equivalence.java
 
 public class Equivalence {
   public static void main(String[] args) {
-    Integer n1 = new Integer(47);
-    Integer n2 = new Integer(47);
+    Integer n1 = Integer.valueOf(47);
+    Integer n2 = Integer.valueOf(47);
     System.out.println(n1 == n2);
     System.out.println(n1 != n2);
   }
